feat: project setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shellscripttemplate",
+  "name": "shell-script-template",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
